Fix number field alignment

--- a/src/resources/src/scss/_input.scss
+++ b/src/resources/src/scss/_input.scss
@@ -256,4 +256,8 @@ body.ltr .superTableMatrix > .titlebar {
     margin-bottom: 7px;
 }
 
+.superTableContainer .field[data-type="craft\\fields\\Number"] .flex:not(.flex-nowrap) > * {
+    margin-bottom: 0 !important;
+}
+
 
